--- a/usr.sbin/makedbm/Attic/Makefile
+++ b/usr.sbin/makedbm/Attic/Makefile
@@ -1,5 +1,5 @@
 #	from: @(#)Makefile	5.8 (Berkeley) 7/28/90
-#	$Id: Makefile,v 1.4 1995/01/29 18:07:06 moj Exp $
+#	$Id: Makefile,v 1.1 1995/10/23 07:46:12 deraadt Exp deraadt $
 
 PROG=	makedbm
 SRCS=	makedbm.c ypdb.c
