--- a/usr.sbin/named/tools/Attic/Makefile
+++ b/usr.sbin/named/tools/Attic/Makefile
@@ -1,5 +1,5 @@
 #	from: @(#)Makefile	4.10 (Berkeley) 5/29/90
-#	$Id: Makefile,v 1.2 1993/07/30 21:41:44 mycroft Exp $
+#	$Id: Makefile,v 1.1 1995/10/18 08:47:55 deraadt Exp dm $
 
 SUBDIR=	nslookup nsquery nstest
 
