--- a/usr.sbin/named/tools/nslookup/Attic/Makefile
+++ b/usr.sbin/named/tools/nslookup/Attic/Makefile
@@ -1,5 +1,5 @@
 #	from: @(#)Makefile	5.23 (Berkeley) 6/24/90
-#	$Id: Makefile,v 1.4 1994/12/22 11:37:21 cgd Exp $
+#	$Id: Makefile,v 1.1 1995/10/18 08:47:55 deraadt Exp dm $
 
 PROG=	nslookup
 SRCS=	main.c getinfo.c debug.c send.c skip.c list.c subr.c
