--- a/bin/chio/Makefile
+++ b/bin/chio/Makefile
@@ -1,3 +1,4 @@
+#	$OpenBSD: Makefile,v 1.1.1.1 1996/04/03 00:34:39 thorpej Exp $
 #	$NetBSD: Makefile,v 1.1.1.1 1996/04/03 00:34:39 thorpej Exp $
 
 PROG=	chio
