--- a/sbin/fsck_ffs/Makefile
+++ b/sbin/fsck_ffs/Makefile
@@ -1,5 +1,5 @@
+#	$OpenBSD: Makefile,v 1.10 1995/03/18 14:55:39 cgd Exp $
 #	$NetBSD: Makefile,v 1.10 1995/03/18 14:55:39 cgd Exp $
-#	@(#)Makefile	8.1 (Berkeley) 6/5/93
 
 PROG=	fsck
 MAN=	fsck.8
