--- a/sbin/init/Makefile
+++ b/sbin/init/Makefile
@@ -1,5 +1,4 @@
-#	@(#)Makefile	8.1 (Berkeley) 7/19/93
-#	$Id$
+#	$OpenBSD: Makefile,v 1.2 1996/02/15 04:03:26 etheisen Exp $
 
 PROG=	init
 MAN=	init.8
