--- a/usr.bin/false/Makefile
+++ b/usr.bin/false/Makefile
@@ -1,5 +1,4 @@
-#	from: @(#)Makefile	5.3 (Berkeley) 5/11/90
-#	$Id: Makefile,v 1.6 1994/12/22 13:10:49 cgd Exp $
+#	$OpenBSD: Makefile,v 1.1.1.1 1995/10/18 08:45:07 deraadt Exp $
 
 MAN=	false.1
 
