--- a/usr.bin/ftp/Makefile
+++ b/usr.bin/ftp/Makefile
@@ -1,4 +1,4 @@
-#	@(#)Makefile	8.2 (Berkeley) 4/3/94
+#       $OpenBSD: Makefile,v 1.6 1995/11/22 21:52:48 cgd Exp $
 #       $NetBSD: Makefile,v 1.6 1995/11/22 21:52:48 cgd Exp $
 
 PROG=	ftp
