--- a/usr.bin/gencat/Makefile
+++ b/usr.bin/gencat/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.1.1.1 1995/10/18 08:45:19 deraadt Exp $
+# $OpenBSD: Makefile,v 1.2 1996/05/22 11:38:52 deraadt Exp $
 
 PROG=	gencat
 NOMAN=
