--- a/bin/chio/Makefile
+++ b/bin/chio/Makefile
@@ -1,9 +1,10 @@
-#	$OpenBSD: Makefile,v 1.1.1.1 1996/04/03 00:34:39 thorpej Exp $
+#	$OpenBSD: Makefile,v 1.2 1996/06/23 14:19:03 deraadt Exp $
 #	$NetBSD: Makefile,v 1.1.1.1 1996/04/03 00:34:39 thorpej Exp $
 
 PROG=	chio
 SRCS=	chio.c
 BINOWN=	root
-BINMODE=4555
+BINGRP=	operator
+BINMODE=4550
 
 .include <bsd.prog.mk>
