--- a/usr.bin/encrypt/Makefile
+++ b/usr.bin/encrypt/Makefile
@@ -1,5 +1,10 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile,v 1.1 1996/08/08 02:07:21 downsj Exp $
 
 PROG=	encrypt
+
+LIBEXEC?=	${DESTDIR}/usr/libexec
+
+LINKS=	${BINDIR}/encrypt ${LIBEXEC}/makekey
+MLINKS=	encrypt.1 makekey.8
 
 .include <bsd.prog.mk>
