--- a/usr.bin/fpr/Attic/Makefile
+++ b/usr.bin/fpr/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.3 1995/09/01 01:34:13 jtc Exp $
+#	$OpenBSD: Makefile,v 1.2 1996/06/26 05:33:24 deraadt Exp deraadt $
 #	$NetBSD: Makefile,v 1.3 1995/09/01 01:34:13 jtc Exp $
 
 PROG=	fpr
