--- a/sbin/init/Makefile
+++ b/sbin/init/Makefile
@@ -1,4 +1,6 @@
-#	$OpenBSD: Makefile,v 1.2 1996/02/15 04:03:26 etheisen Exp $
+#	$OpenBSD: Makefile,v 1.3 1996/06/23 14:30:48 deraadt Exp $
+
+STATIC=	-static
 
 PROG=	init
 MAN=	init.8
