--- a/usr.bin/chpass/Makefile
+++ b/usr.bin/chpass/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.3 1996/06/26 05:31:53 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.4 1996/09/04 22:52:06 deraadt Exp $
 #	$NetBSD: Makefile,v 1.6 1996/05/15 21:50:39 jtc Exp $
 
 .include <bsd.own.mk>
@@ -11,7 +11,7 @@ BINMODE=4555
 LINKS=	${BINDIR}/chpass ${BINDIR}/chfn ${BINDIR}/chpass ${BINDIR}/chsh
 MLINKS=	chpass.1 chfn.1 chpass.1 chsh.1
 .if defined(YP)
-CFLAGS+=-DYP
+CFLAGS+=-DYP -I${.CURDIR}/../../lib/libc/yp
 .endif
 DPADD+= ${LIBRPCSVC} ${LIBUTIL}
 LDADD+= -lrpcsvc -lutil
