--- a/share/man/man4/man4.tahoe/Attic/Makefile
+++ b/share/man/man4/man4.tahoe/Attic/Makefile
@@ -1,5 +1,5 @@
 #	from: @(#)Makefile	5.4 (Berkeley) 5/11/90
-#	$Id: Makefile,v 1.4 1994/12/22 10:49:21 cgd Exp $
+#	$Id: Makefile,v 1.1 1995/10/18 08:44:32 deraadt Exp $
 
 MAN=	ace.4 autoconf.4 cons.4 cy.4 dr.4 enp.4 ik.4 intro.4 lp.4 mem.4 \
 	mtio.4 vd.4 vx.4
