--- a/usr.sbin/named/xfer/Attic/Makefile
+++ b/usr.sbin/named/xfer/Attic/Makefile
@@ -1,5 +1,5 @@
 #	from: @(#)Makefile	5.1 (Berkeley) 5/28/90
-#	$Id: Makefile,v 1.4 1994/12/22 12:42:30 cgd Exp $
+#	$Id: Makefile,v 1.1 1995/10/18 08:47:56 deraadt Exp $
 
 PROG=	named-xfer
 SRCS=	named-xfer.c db_glue.c
