--- a/usr.sbin/ipsend/ipresend/Attic/Makefile
+++ b/usr.sbin/ipsend/ipresend/Attic/Makefile
@@ -1,10 +1,11 @@
-#	$Id: Makefile,v 1.1 1996/05/10 21:40:57 dm Exp $
+#	$OpenBSD$
 
 PROG=	ipresend
 BINDIR=	/usr/sbin
-NOMAN=		
-SRCS=	ipresend.c resend.c ip.c sbpf.c sock.c 44arp.c opt.c \
-	ipft_ef.c ipft_hx.c ipft_pc.c ipft_sn.c ipft_tx.c ipft_td.c
+MAN=	ipresend.1
+SRCS=	ipresend.o resend.o \
+	ipft_ef.o ipft_hx.o ipft_pc.o ipft_sn.o ipft_td.o ipft_tx.o opt.o \
+	sock.o 44arp.o sbpf.o ip.o 
 CFLAGS+=  -DDOSOCKET -I${.CURDIR}/../common -I${.CURDIR}/../../ipftest \
 		-I${.CURDIR}/../../../sbin/ipf \
 		-I${.CURDIR}/../../../sys/netinet
