--- a/usr.sbin/ipsend/ipsend/Attic/Makefile
+++ b/usr.sbin/ipsend/ipsend/Attic/Makefile
@@ -1,10 +1,14 @@
-#	$Id$
+#	$OpenBSD$
 
 PROG=	ipsend
 BINDIR=	/usr/sbin
-NOMAN=		
-SRCS=	ipsend.c ip.c ipsopt.c sbpf.c sock.c 44arp.c
-CFLAGS+=  -DDOSOCKET -I${.CURDIR}/../common -I${.CURDIR}/../../ipftest
+MAN=    ipsend.1 ipsend.5
+SRCS=	ipsend.c ip.c ipsopt.c sbpf.c sock.c 44arp.c iplang_y.y iplang_l.l
+CFLAGS+=  -DDOSOCKET -I${.CURDIR}/../common -I${.CURDIR}/../../ipftest \
+	-I${.CURDIR}/../../../sbin/ipf -I${.CURDIR}/../../../sys/netinet
+LDADD   = -lfl
+CLEANFILES+=y.tab.h
+
 .PATH:	${.CURDIR}/../common
 
 .include <bsd.prog.mk>
