--- a/usr.sbin/ipsend/iptest/Attic/Makefile
+++ b/usr.sbin/ipsend/iptest/Attic/Makefile
@@ -1,10 +1,11 @@
-#	$Id$
+#	$OpenBSD$
 
 PROG=	iptest
 BINDIR=	/usr/sbin
-NOMAN=		
+MAN=	iptest.1
 SRCS=	iptest.c iptests.c ip.c sbpf.c sock.c 44arp.c
-CFLAGS+=  -DDOSOCKET -I${.CURDIR}/../common -I${.CURDIR}/../../ipftest
+CFLAGS+=  -DDOSOCKET -I${.CURDIR}/../common -I${.CURDIR}/../../ipftest \
+	-I${.CURDIR}/../../../sys/netinet -I${.CURDIR}/../../../sbin/ipf
 .PATH:	${.CURDIR}/../common
 
 .include <bsd.prog.mk>
