--- a/usr.sbin/named/Attic/Makefile
+++ b/usr.sbin/named/Attic/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.5 1997/03/14 03:40:30 downsj Exp $
+#	$OpenBSD: Makefile,v 1.6 1997/09/21 11:43:59 deraadt Exp $
 
 SUBDIR= named named-xfer ndc reload restart dig nslookup \
 	host dnsquery addr
 
-VER= 4.9.5-P1
+VER= 4.9.6-REL
 
 .include <bsd.subdir.mk>
