--- a/usr.sbin/named/Attic/Makefile
+++ b/usr.sbin/named/Attic/Makefile
@@ -1,7 +1,10 @@
-#	$OpenBSD: Makefile,v 1.6 1997/09/21 11:43:59 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.7 1998/05/22 00:47:12 millert Exp $
 
 SUBDIR= named named-xfer ndc reload restart dig nslookup \
 	host dnsquery addr
+.if make(install)
+SUBDIR+= doc/bog
+.endif
 
 VER= 4.9.6-REL
 
