--- a/usr.sbin/named/Attic/Makefile.inc
+++ b/usr.sbin/named/Attic/Makefile.inc
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.inc,v 1.5 1997/03/14 03:40:31 downsj Exp $
+#	$OpenBSD: Makefile.inc,v 1.6 1997/09/21 11:43:59 deraadt Exp $
 
 BIND_DIR=	${.CURDIR}/..
 
@@ -6,6 +6,7 @@ VER!=		awk -F' *= *' '$$1 == "VER" { print $$2 ; exit }' \
 		${BIND_DIR}/Makefile
 
 PIDDIR=		/var/run
+CHROOTDIR=	/var/named
 PS=		ps
 IOT=		ABRT
 
