--- a/usr.bin/fstat/Makefile
+++ b/usr.bin/fstat/Makefile
@@ -1,7 +1,8 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile,v 1.3 1997/09/21 11:49:07 deraadt Exp $
 
 PROG=	fstat
 DPADD=	${LIBKVM}
+SRCS=	fstat.c isofs.c
 LDADD=	-lkvm
 BINGRP=	kmem
 BINMODE=2555
