--- a/usr.sbin/ipftest/Attic/Makefile
+++ b/usr.sbin/ipftest/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.4 1997/09/21 11:43:45 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.5 1998/01/26 04:16:31 dgregor Exp $
 
 PROG=	ipftest 
 MAN=	ipftest.1	
@@ -9,8 +9,8 @@ SRCS=	ipt.c fil.c ipft_hx.c ipft_sn.c ipft_ef.c ipft_td.c ipft_pc.c \
 .PATH: 	${.CURDIR}/../../sbin/ipf ${.CURDIR}/../../sbin/ipfstat \
 	${.CURDIR}/../../sys/netinet
 
-CFLAGS+=-DIPL_NAME=\"/dev/ipl\" -I${.CURDIR}/../../sbin/ipf \
-	-I${.CURDIR}/../../sys/netinet -I${.CURDIR}
+CFLAGS+=-I${.CURDIR}/../../sbin/ipf \
+	-I${.CURDIR}
 
 
 .include <bsd.prog.mk>
