--- a/sbin/isakmpd/Makefile
+++ b/sbin/isakmpd/Makefile
@@ -1,4 +1,4 @@
-#	$Id: Makefile,v 1.32 1998/10/10 16:58:15 niklas Exp $
+#	$OpenBSD: Makefile,v 1.1.1.1 1998/11/15 00:03:48 niklas Exp $
 
 #
 # Copyright (c) 1998 Niklas Hallqvist.  All rights reserved.
