--- a/sbin/ipnat/Attic/Makefile
+++ b/sbin/ipnat/Attic/Makefile
@@ -1,7 +1,7 @@
-#	$OpenBSD: Makefile,v 1.3 1998/01/26 04:13:45 dgregor Exp $
+#	$OpenBSD: Makefile,v 1.4 1998/09/15 09:57:29 pattonme Exp $
 
 PROG=	ipnat
-MAN=	ipnat.1 ipnat.4 ipnat.5
+MAN=	ipnat.8 ipnat.4 ipnat.5
 SRCS=	ipnat.c kmem.c 
 .PATH:  ${.CURDIR}/../ipfstat
 CFLAGS+=-I${.CURDIR}/../../sbin/ipfstat
