--- a/sbin/ipsecadm/Attic/Makefile
+++ b/sbin/ipsecadm/Attic/Makefile
@@ -1,7 +1,6 @@
-#	$OpenBSD: Makefile,v 1.8 1998/05/24 13:28:58 provos Exp $
+#	$OpenBSD: Makefile,v 1.1 1998/11/14 23:37:20 deraadt Exp $
 
 PROG= ipsecadm
-SRCS= ipsecadm.c kernel.c xf_esp_new.c xf_esp_old.c xf_ah_old.c xf_ah_new.c \
-	xf_delspi.c xf_grp.c xf_ip4.c xf_flow.c
+SRCS= ipsecadm.c
 
 .include <bsd.prog.mk>
