--- a/sbin/ipsecadm/Attic/Makefile
+++ b/sbin/ipsecadm/Attic/Makefile
@@ -1,6 +1,7 @@
-#	$OpenBSD: Makefile,v 1.1 1998/11/14 23:37:20 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.2 1999/02/24 22:53:36 angelos Exp $
 
 PROG= ipsecadm
+MAN=  ipsecadm.8
 SRCS= ipsecadm.c
 
 .include <bsd.prog.mk>
