--- a/usr.bin/fstat/Makefile
+++ b/usr.bin/fstat/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.3 1997/09/21 11:49:07 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.4 1998/06/25 06:21:33 deraadt Exp $
 
 PROG=	fstat
 DPADD=	${LIBKVM}
@@ -8,3 +8,7 @@ BINGRP=	kmem
 BINMODE=2555
 
 .include <bsd.prog.mk>
+
+.if (${UVM} == "yes")
+CFLAGS+=-DUVM
+.endif
