--- a/bin/ksh/Makefile
+++ b/bin/ksh/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.10 1999/01/10 17:55:01 millert Exp $
+#	$OpenBSD: Makefile,v 1.11 1999/06/15 01:18:32 millert Exp $
 
 PROG=	ksh
 SRCS=	alloc.c c_ksh.c c_sh.c c_test.c c_ulimit.c edit.c emacs.c \
@@ -9,6 +9,10 @@ SRCS=	alloc.c c_ksh.c c_sh.c c_test.c c_ulimit.c edit.c emacs.c \
 DEFS=	-DHAVE_CONFIG_H -Wall -Wno-unused
 CFLAGS+=${DEFS} -I. -I${.CURDIR} -DKSH
 MAN=	ksh.1 sh.1
+
+.if (${MACHINE_ARCH} == "m88k")
+CFLAGS+=-O0
+.endif
 
 CLEANFILES+=	siglist.out emacs.out
 
