--- a/usr.bin/compress/Makefile
+++ b/usr.bin/compress/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.8 1997/07/06 20:42:15 mickey Exp $
+#	$OpenBSD: Makefile,v 1.9 1997/07/07 02:57:04 deraadt Exp $
 
 PROG=	compress
 SRCS=	main.c zopen.c gzopen.c
@@ -8,7 +8,8 @@ LINKS=	${BINDIR}/compress ${BINDIR}/uncompress \
 #	${BINDIR}/compress ${BINDIR}/gzip \
 #	${BINDIR}/compress ${BINDIR}/gunzip \
 #	${BINDIR}/compress ${BINDIR}/gzcat
-MLINKS= compress.1 uncompress.1 \
+MLINKS= zopen.3 zdopen.3 \
+	compress.1 uncompress.1 \
 	compress.1 zcat.1 \
 #	compress.1 gzip.1 \
 #	compress.1 gunzip.1 \
