--- a/sbin/ifconfig/Makefile
+++ b/sbin/ifconfig/Makefile
@@ -1,6 +1,11 @@
-#	$OpenBSD: Makefile,v 1.2 1996/06/23 14:30:46 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.3 1997/09/21 11:36:46 deraadt Exp $
 
 PROG=	ifconfig
 MAN=	ifconfig.8
+
+CPPFLAGS+=-DINET6
+
+# kame scopeid hack
+#CPPFLAGS+=-DKAME_SCOPEID
 
 .include <bsd.prog.mk>
