--- a/usr.sbin/mailwrapper/Makefile
+++ b/usr.sbin/mailwrapper/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.1 1999/08/02 19:50:07 jakob Exp $
+#	$OpenBSD: Makefile,v 1.3 2000/04/06 01:03:59 millert Exp $
 
 PROG=	mailwrapper
 MAN=	mailwrapper.8 mailer.conf.5
@@ -8,7 +8,6 @@ LDADD+=	-lutil
 
 afterinstall:
 	ln -fs /usr/sbin/mailwrapper ${DESTDIR}/usr/sbin/sendmail
-	ln -fs /usr/sbin/mailwrapper ${DESTDIR}/usr/sbin/smtpd
 	ln -fs /usr/sbin/mailwrapper ${DESTDIR}/usr/bin/newaliases
 	ln -fs /usr/sbin/mailwrapper ${DESTDIR}/usr/bin/mailq
 	ln -fs /usr/sbin/mailwrapper ${DESTDIR}/usr/bin/hoststat
