--- a/share/man/man5/Makefile
+++ b/share/man/man5/Makefile
@@ -12,5 +12,6 @@ MLINKS= dir.5 dirent.5 fs.5 inode.5 utmp.5 wtmp.5 utmp.5 lastlog.5
 MLINKS+= hosts.equiv.5 .rhosts.5 
 MLINKS+= resolv.conf.5 resolver.5
 MLINKS+= hostname.if.5 bridgename.if.5
+MLINKS+= passwd.5 master.passwd.5
 
 .include <bsd.prog.mk>
