--- a/usr.bin/fstat/Makefile
+++ b/usr.bin/fstat/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.5 1999/06/23 12:56:18 art Exp $
+#	$OpenBSD: Makefile,v 1.6 2000/01/17 16:26:18 itojun Exp $
 
 PROG=	fstat
 DPADD=	${LIBKVM}
@@ -11,6 +11,6 @@ CFLAGS+=-DINET6
 
 .include <bsd.prog.mk>
 
-.if (${UVM} == "yes")
+.if (${UVM:L} == "yes")
 CFLAGS+=-DUVM
 .endif
