--- a/usr.bin/ftp/Makefile
+++ b/usr.bin/ftp/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.16 1999/12/08 12:57:06 itojun Exp $
+#	$OpenBSD: Makefile,v 1.17 2000/09/03 18:41:23 espie Exp $
 
 # Define SMALL to disable command line editing
 #CFLAGS+=-DSMALL
@@ -15,7 +15,6 @@ PROG=	ftp
 SRCS=	cmds.c cmdtab.c complete.c domacro.c fetch.c ftp.c main.c ruserpass.c \
 	stringlist.c util.c
 
-# not really used at this moment
 CPPFLAGS+= -DINET6
 
 LDADD+=	-ledit -lcurses
