--- a/share/man/man4/man4.powerpc/Attic/Makefile
+++ b/share/man/man4/man4.powerpc/Attic/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.21 1998/09/09 22:10:58 jason Exp $
+#	$OpenBSD: Makefile,v 1.1 1998/09/24 04:43:05 rahnds Exp $
 #	from: @(#)Makefile	5.1 (Berkeley) 2/12/91
 #	Id: Makefile,v 1.4 1995/12/14 05:41:38 deraadt Exp $
 
-MAN=	com.4 
+MAN=	com.4
 
 MANSUBDIR=/powerpc
 
