--- a/sys/dev/cardbus/Attic/Makefile.cardbusdevs
+++ b/sys/dev/cardbus/Attic/Makefile.cardbusdevs
@@ -1,4 +1,4 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile.cardbusdevs,v 1.1 2000/03/02 23:03:26 aaron Exp $
 #	$NetBSD: Makefile.cardbusdevs,v 1.2 1999/10/15 06:42:21 haya Exp $
 
 AWK=	awk
