--- a/usr.sbin/named/Attic/Makefile
+++ b/usr.sbin/named/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.9 1998/05/22 07:09:05 millert Exp $
+#	$OpenBSD: Makefile,v 1.10 2000/03/29 20:32:55 deraadt Exp $
 
 SUBDIR= named named-xfer ndc reload restart dig nslookup \
 	host dnsquery
@@ -6,6 +6,6 @@ SUBDIR= named named-xfer ndc reload restart dig nslookup \
 SUBDIR+= doc/bog
 .endif
 
-VER= 4.9.7-REL
+VER= 4.9.8-REL
 
 .include <bsd.subdir.mk>
