--- a/share/man/man7/Makefile
+++ b/share/man/man7/Makefile
@@ -1,5 +1,5 @@
+#	$OpenBSD: Makefile,v 1.6 1994/12/22 10:50:05 cgd Exp $
 #	$NetBSD: Makefile,v 1.6 1994/12/22 10:50:05 cgd Exp $
-#	@(#)Makefile	8.1 (Berkeley) 6/5/93
 
 # missing: eqnchar.7 man.7 ms.7 term.7
 
