--- a/sbin/ipnat/Attic/Makefile
+++ b/sbin/ipnat/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.9 2000/04/26 21:04:00 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.10 2001/01/17 05:01:01 fgsch Exp $
 
 PROG=	ipnat
 MAN=	ipnat.8 ipnat.4 ipnat.5
