--- a/usr.sbin/ipmon/Attic/Makefile
+++ b/usr.sbin/ipmon/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.3 1997/09/21 11:43:46 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.4 1998/09/15 10:01:38 pattonme Exp $
 
 PROG=	ipmon
 MAN=	ipmon.8	
