--- a/share/man/man4/man4.powerpc/Attic/Makefile
+++ b/share/man/man4/man4.powerpc/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.5 2001/08/21 02:34:32 pvalchev Exp $
+#	$OpenBSD: Makefile,v 1.6 2001/08/21 19:58:03 drahn Exp $
 #	from: @(#)Makefile	5.1 (Berkeley) 2/12/91
 #	Id: Makefile,v 1.4 1995/12/14 05:41:38 deraadt Exp $
 
