--- a/usr.sbin/named/named-xfer/Attic/Makefile
+++ b/usr.sbin/named/named-xfer/Attic/Makefile
@@ -1,8 +1,9 @@
-#	$OpenBSD: Makefile,v 1.3 1998/05/23 19:24:54 millert Exp $
+#	$OpenBSD: Makefile,v 1.4 2002/05/11 00:20:20 espie Exp $
 #	$NetBSD: Makefile,v 1.2 1996/02/04 12:02:12 mrg Exp $
 # from: $Id: Makefile,v 8.2 1995/12/31 23:28:01 vixie Exp 
 
 .PATH:	${.CURDIR}/../named \
+	${.CURDIR}/../named/obj \
 	${.CURDIR}/../man
 
 PROG=	named-xfer
