--- a/usr.sbin/named/dig/Attic/Makefile
+++ b/usr.sbin/named/dig/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.5 1997/04/13 21:25:34 provos Exp $
+#	$OpenBSD: Makefile,v 1.6 1998/11/20 11:19:01 d Exp $
 #	$NetBSD: Makefile,v 1.2 1996/03/31 13:55:34 mrg Exp $
 # from: $Id: Makefile,v 8.1 1994/12/15 06:23:45 vixie Exp 
 
