--- a/usr.sbin/named/dnsquery/Attic/Makefile
+++ b/usr.sbin/named/dnsquery/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.2 1997/03/12 10:41:49 downsj Exp $
+#	$OpenBSD: Makefile,v 1.3 2002/05/11 00:20:20 espie Exp $
 #	$NetBSD: Makefile,v 1.1 1996/02/02 15:26:21 mrg Exp $
 
 .PATH:	${.CURDIR}/../man
