--- a/usr.sbin/named/host/Attic/Makefile
+++ b/usr.sbin/named/host/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.3 1997/03/12 10:41:50 downsj Exp $
+#	$OpenBSD: Makefile,v 1.4 2002/05/11 00:20:20 espie Exp $
 #	$NetBSD: Makefile,v 1.2 1996/05/14 13:55:47 mrg Exp $
 
 .PATH: ${.CURDIR}/../man
