--- a/usr.sbin/named/nslookup/Attic/Makefile
+++ b/usr.sbin/named/nslookup/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.4 1997/04/27 20:57:03 millert Exp $
+#	$OpenBSD: Makefile,v 1.5 2002/05/11 00:20:20 espie Exp $
 #	$NetBSD: Makefile,v 1.1 1996/02/02 15:29:56 mrg Exp $
 # from: $Id: Makefile,v 8.1 1994/12/15 06:23:48 vixie Exp 
 
