--- a/usr.sbin/named/restart/Attic/Makefile
+++ b/usr.sbin/named/restart/Attic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.5 1996/12/08 15:00:03 downsj Exp $
+#	$OpenBSD: Makefile,v 1.6 1997/04/27 20:57:05 millert Exp $
 #	$NetBSD: Makefile,v 1.1 1996/02/02 15:30:35 mrg Exp $
 # from: $Id: Makefile,v 8.1 1994/12/15 06:23:47 vixie Exp 
 
