--- a/bin/md5/Makefile
+++ b/bin/md5/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.7 2003/04/26 23:32:23 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.8 2004/05/02 17:53:29 millert Exp $
 
 PROG=	md5
 SRCS=	crc.c md5.c
@@ -7,6 +7,7 @@ LINKS=	${BINDIR}/md5 ${BINDIR}/sha1 \
 	${BINDIR}/md5 ${BINDIR}/rmd160 \
 	${BINDIR}/md5 ${BINDIR}/cksum \
 	${BINDIR}/md5 ${BINDIR}/sum
+MLINKS= cksum.1 sum.1
 
 CPPFLAGS+= -I${.CURDIR}
 COPTS+=	-ansi -Wall -Wconversion -Wmissing-prototypes
