--- a/usr.bin/du/Makefile
+++ b/usr.bin/du/Makefile
@@ -1,5 +1,7 @@
-#	$OpenBSD: Makefile,v 1.2 1996/06/26 05:32:36 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.3 1997/09/21 11:48:54 deraadt Exp $
 
 PROG=	du
+DPADD= ${LIBUTIL}
+LDADD= -lutil
 
 .include <bsd.prog.mk>
