--- a/usr.bin/cvs/cvsd/Attic/Makefile
+++ b/usr.bin/cvs/cvsd/Attic/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.4 2004/08/02 16:21:07 jfb Exp $
+# $Id: Makefile,v 1.5 2004/11/25 18:30:12 jfb Exp $
 
 .PATH:	${.CURDIR}/..
 
@@ -8,7 +8,7 @@ SRCS= cvsd.c buf.c conf.y log.c msg.c rcs.c rcsnum.c session.c sock.c
 BINDIR=/usr/sbin
 MAN=cvsd.8 cvsd.conf.5
 
-CFLAGS+= -Wall
+CFLAGS+= -Wall -I${.CURDIR}/..
 CFLAGS+= -Wstrict-prototypes -Wmissing-prototypes
 CFLAGS+= -Wsign-compare
 CFLAGS+= -DCVSD
