--- a/usr.bin/cvs/cvs/Attic/Makefile
+++ b/usr.bin/cvs/cvs/Attic/Makefile
@@ -1,13 +1,14 @@
-# $Id: Makefile,v 1.10 2004/11/26 16:23:50 jfb Exp $
+# $Id: Makefile,v 1.11 2004/12/08 18:07:07 xsa Exp $
 
 .PATH:	${.CURDIR}/..
 
 PROG=cvs
 MAN=cvs.1 cvsrc.5
 
-SRCS= cvs.c add.c buf.c checkout.c commit.c diff.c entries.c file.c \
-	getlog.c history.c hist.c init.c log.c logmsg.c proto.c rcs.c rcsnum.c \
-	req.c resp.c root.c server.c sock.c status.c update.c util.c version.c
+SRCS= cvs.c add.c annotate.c buf.c checkout.c commit.c diff.c entries.c \
+	file.c getlog.c history.c hist.c init.c log.c logmsg.c proto.c \
+	rcs.c rcsnum.c req.c resp.c root.c server.c sock.c status.c \
+	update.c util.c version.c
 
 BINDIR=/usr/bin
 BINOWN=root
