--- a/usr.bin/cvs/cvsd/Attic/Makefile
+++ b/usr.bin/cvs/cvsd/Attic/Makefile
@@ -1,9 +1,9 @@
-# $Id: Makefile,v 1.7 2004/12/08 18:07:07 xsa Exp $
+# $Id: Makefile,v 1.8 2004/12/08 18:52:53 xsa Exp $
 
 .PATH:	${.CURDIR}/..
 
 PROG=cvsd
-SRCS= cvsd.c buf.c conf.y log.c msg.c rcs.c rcsnum.c session.c sock.c
+SRCS= cvsd.c buf.c conf.y log.c msg.c repo.c sock.c
 
 BINDIR=/usr/sbin
 MAN=cvsd.8 cvsd.conf.5
