--- a/usr.bin/cvs/cvsd/Attic/Makefile
+++ b/usr.bin/cvs/cvsd/Attic/Makefile
@@ -1,12 +1,12 @@
-# $Id: Makefile,v 1.8 2004/12/08 18:52:53 xsa Exp $
+#	$OpenBSD$
 
 .PATH:	${.CURDIR}/..
 
-PROG=cvsd
-SRCS= cvsd.c buf.c conf.y log.c msg.c repo.c sock.c
+PROG=	cvsd
+SRCS=	cvsd.c buf.c conf.y log.c msg.c repo.c sock.c
 
-BINDIR=/usr/sbin
-MAN=cvsd.8 cvsd.conf.5
+BINDIR=	/usr/sbin
+MAN=	cvsd.8 cvsd.conf.5
 
 CFLAGS+= -Wall -I${.CURDIR}/..
 CFLAGS+= -Wstrict-prototypes -Wmissing-prototypes
