--- a/bin/chio/Makefile
+++ b/bin/chio/Makefile
@@ -1,6 +1,8 @@
-#	$OpenBSD: Makefile,v 1.7 1997/09/21 11:34:41 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.8 2005/11/25 20:37:19 deraadt Exp $
 
 PROG=	chio
-SRCS=	chio.c
+SRCS=	chio.c parse.y
+DPADD=	${LIBUTIL}
+LDADD=	-lutil
 
 .include <bsd.prog.mk>
