--- a/usr.sbin/ifstated/Makefile
+++ b/usr.sbin/ifstated/Makefile
@@ -1,10 +1,10 @@
-#	$OpenBSD: Makefile,v 1.5 2005/07/28 17:05:35 mpf Exp $
+#	$OpenBSD: Makefile,v 1.6 2005/08/06 08:27:16 sturm Exp $
 
 PROG=	ifstated
 SRCS=	ifstated.c parse.y
 CFLAGS+= -Wall -I${.CURDIR}
 CFLAGS+= -Wstrict-prototypes -Wmissing-prototypes
-CLFAGS+= -Wmissing-declarations -Wredundant-decls
+CFLAGS+= -Wmissing-declarations -Wredundant-decls
 CFLAGS+= -Wshadow -Wpointer-arith -Wcast-qual
 YFLAGS=
 MAN= ifstated.8 ifstated.conf.5
