--- a/usr.sbin/mksuncd/Makefile
+++ b/usr.sbin/mksuncd/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.3 2003/03/02 12:32:08 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.1 2008/08/22 15:48:32 deraadt Exp $
 
 .if ${MACHINE} == "sparc64"
 
@@ -10,6 +10,7 @@ NOPROG=
 .endif
 
 MAN=	mksuncd.1
+MANSUBDIR=sparc64
 
 .include <bsd.prog.mk>
 
