Switch fsck_msdos(8) to opendev(3) so that it can handle disklabel UIDs.

--- a/sbin/fsck_msdos/Makefile
+++ b/sbin/fsck_msdos/Makefile
@@ -3,7 +3,9 @@
 PROG=	fsck_msdos
 MAN=	fsck_msdos.8
 SRCS=	main.c check.c boot.c fat.c dir.c fsutil.c
-CFLAGS+= -I${.CURDIR}/../fsck
 .PATH: ${.CURDIR}/../fsck
+CFLAGS+= -I${.CURDIR}/../fsck
+DPADD+=	${LIBUTIL}
+LDADD+=	-lutil
 
 .include <bsd.prog.mk>
